--- a/mapping_config.json
+++ b/mapping_config.json
@@ -49,6 +49,11 @@
         "caminho_xml": "infNFe/emit/CNPJ",
         "secao": "Emissor"
     },
+    "EMIT_CPF": {
+        "descricao": "CPF do emitente",
+        "caminho_xml": "infNFe/emit/CPF",
+        "secao": "Emissor"
+    },
     "EMIT_RAZAO_SOCIAL": {
         "descricao": "Razão social do emitente",
         "caminho_xml": "infNFe/emit/xNome",
@@ -71,12 +76,12 @@
     },
     "EMIT_MUNICIPIO": {
         "descricao": "Município do emitente",
-        "caminho_xml": "infNFe/enderEmit/xMun",
+        "caminho_xml": "infNFe/emit/enderEmit/xMun",
         "secao": "Emissor"
     },
     "EMIT_CEP": {
         "descricao": "CEP do emitente",
-        "caminho_xml": "infNFe/enderEmit/CEP",
+        "caminho_xml": "infNFe/emit/enderEmit/CEP",
         "secao": "Emissor"
     },
     "DEST_CNPJ": {
@@ -124,6 +129,16 @@
         "caminho_xml": "infNFe/det/@nItem",
         "secao": "Item - Produto"
     },
+    "ITEM_OUTROS_IMPOSTOS": {
+        "descricao": "Outros impostos no item (II, etc.)",
+        "caminho_xml": "filhos de infNFe/det/imposto/* ≠ ICMS, IPI, PIS, COFINS",
+        "secao": "Item - Outros Impostos"
+    },
+    "ITEM_TODOS_IMPOSTOS": {
+        "descricao": "Todos os impostos no item (ICMS, IPI, PIS, COFINS, ISSQN, etc.)",
+        "caminho_xml": "filhos de infNFe/det/imposto/*",
+        "secao": "Item - Todos Impostos"
+    },
     "ITEM_CPROD": {
         "descricao": "Código do produto (cProd)",
         "caminho_xml": "infNFe/det/prod/cProd",
@@ -169,11 +184,6 @@
         "caminho_xml": "infNFe/det/imposto/ICMS",
         "secao": "Item - ICMS"
     },
-    "ITEM_ICMS_TIPO_GRUPO": {
-        "descricao": "Tipo de ICMS (ICMS00, ICMS10, ICMS20, ICMSSN101 etc.)",
-        "caminho_xml": "infNFe/det/imposto/ICMS/*",
-        "secao": "Item - ICMS"
-    },
     "ITEM_ICMS_ORIGEM": {
         "descricao": "Origem da mercadoria (orig)",
         "caminho_xml": "infNFe/det/imposto/ICMS/*/orig",
@@ -189,17 +199,17 @@
         "caminho_xml": "infNFe/det/imposto/ICMS/*/CSOSN",
         "secao": "Item - ICMS"
     },
-    "ICMS_QTD_BC_MONO_RET": {
+    "ITEM_ICMS_QTD_BC_MONO_RET": {
         "descricao": "Quantidade que serviu de base para o cálculo do imposto já retido.",
         "caminho_xml": "infNFe/det/imposto/ICMS/*/qBCMonoRet",
         "secao": "Item - ICMS"
     },
-    "ICMS_ALIQUOTA_MONO_RET": {
+    "ITEM_ICMS_ALIQUOTA_MONO_RET": {
         "descricao": "Alíquota específica",
         "caminho_xml": "infNFe/det/imposto/ICMS/*/adRemICMSRet",
         "secao": "Item - ICMS"
     },
-    "ICMS_VALOR_MONO_RET": {
+    "ITEM_ICMS_VALOR_MONO_RET": {
         "descricao": "O valor total do imposto que foi retido",
         "caminho_xml": "infNFe/det/imposto/ICMS/*/vICMSMonoRet",
         "secao": "Item - ICMS"
@@ -236,117 +246,127 @@
     },
     "ITEM_TEM_ICMS": {
         "descricao": "Indica se o item possui ICMS",
-        "caminho_xml": "presença de infNFe/det/imposto/ICMS",
+        "caminho_xml": "infNFe/det/imposto/ICMS",
         "secao": "Item - ICMS"
     },
     "ITEM_TEM_ST": {
         "descricao": "Indica se o item possui ICMS ST",
         "caminho_xml": "presença de vBCST ou vICMSST no grupo de ICMS",
-        "secao": "Item - ICMS"
+        "secao": "Item - ST"
     },
     "ITEM_IPI_BLOCO": {
         "descricao": "Bloco de IPI do item",
         "caminho_xml": "infNFe/det/imposto/IPI",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - IPI"
     },
     "ITEM_IPI_CST": {
         "descricao": "CST do IPI (tributado ou isento)",
         "caminho_xml": "infNFe/det/imposto/IPI/*/CST",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - IPI"
     },
     "ITEM_IPI_VBC": {
         "descricao": "Base de cálculo do IPI",
         "caminho_xml": "infNFe/det/imposto/IPI/*/vBC",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - IPI"
     },
     "ITEM_IPI_PIPI": {
         "descricao": "Alíquota de IPI (%)",
         "caminho_xml": "infNFe/det/imposto/IPI/*/pIPI",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - IPI"
     },
     "ITEM_IPI_VIPI": {
         "descricao": "Valor de IPI",
         "caminho_xml": "infNFe/det/imposto/IPI/*/vIPI",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - IPI"
     },
     "ITEM_TEM_IPI": {
         "descricao": "Indica se o item possui IPI",
-        "caminho_xml": "presença de infNFe/det/imposto/IPI",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "caminho_xml": "infNFe/det/imposto/IPI",
+        "secao": "Item - IPI"
     },
     "ITEM_COFINS_BLOCO": {
         "descricao": "Bloco de COFINS do item",
         "caminho_xml": "infNFe/det/imposto/COFINS",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - COFINS"
     },
     "ITEM_COFINS_CST": {
         "descricao": "CST de COFINS",
         "caminho_xml": "infNFe/det/imposto/COFINS/*/CST",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - COFINS"
     },
     "ITEM_COFINS_VBC": {
         "descricao": "Base de cálculo de COFINS",
         "caminho_xml": "infNFe/det/imposto/COFINS/*/vBC",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - COFINS"
     },
     "ITEM_COFINS_PCOFINS": {
         "descricao": "Alíquota de COFINS (%)",
-        "caminho_xml": "infNFe/det/imposto/COFINS/*/pCOFINS",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "caminho_xml": "infNFe/det/imposto/COFINS/*/vAliqProd",
+        "secao": "Item - COFINS"
     },
     "ITEM_COFINS_VCOFINS": {
         "descricao": "Valor de COFINS",
         "caminho_xml": "infNFe/det/imposto/COFINS/*/vCOFINS",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - COFINS"
     },
     "ITEM_TEM_COFINS": {
         "descricao": "Indica se o item possui COFINS",
-        "caminho_xml": "presença de infNFe/det/imposto/COFINS",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "caminho_xml": "infNFe/det/imposto/COFINS",
+        "secao": "Item - COFINS"
     },
     "ITEM_PIS_BLOCO": {
         "descricao": "Bloco de PIS do item",
         "caminho_xml": "infNFe/det/imposto/PIS",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - PIS"
+    },
+    "ITEM_PIS_CST": {
+        "descricao": "CST de PIS",
+        "caminho_xml": "infNFe/det/imposto/PIS/*/CST",
+        "secao": "Item - PIS"
+    },
+    "ITEM_PIS_PPIS": {
+        "descricao": "Alíquota de PIS (%)",
+        "caminho_xml": "infNFe/det/imposto/PIS/*/vAliqProd",
+        "secao": "Item - PIS"
+    },
+    "ITEM_PIS_VPIS": {
+        "descricao": "Valor de PIS",
+        "caminho_xml": "infNFe/det/imposto/PIS/*/vPIS",
+        "secao": "Item - PIS"
     },
     "ITEM_ISSQN_BLOCO": {
         "descricao": "Bloco de ISSQN do item",
         "caminho_xml": "infNFe/det/imposto/ISSQN",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "secao": "Item - ISSQN"
     },
     "ITEM_TEM_ISSQN": {
         "descricao": "Indica se o item possui ISSQN",
-        "caminho_xml": "presença de infNFe/det/imposto/ISSQN",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
+        "caminho_xml": "infNFe/det/imposto/ISSQN",
+        "secao": "Item - ISSQN"
     },
-    "ITEM_OUTRO_IMPOSTO": {
-        "descricao": "Outros impostos no item (II, etc.)",
-        "caminho_xml": "filhos de infNFe/det/imposto/* ≠ ICMS, IPI, PIS, COFINS",
-        "secao": "Item - IPI/PIS/COFINS/ISSQN"
-    },
-    "ITEM_ICMS_UFDEST_BLOCO": {
+    "ITEM_DIFAL_UFDEST_BLOCO": {
         "descricao": "Bloco de ICMSUFDest (DIFAL por item)",
         "caminho_xml": "infNFe/det/imposto/ICMSUFDest",
         "secao": "Item - DIFAL"
     },
-    "ITEM_ICMS_UFDEST_VBCUFDEST": {
+    "ITEM_DIFAL_UFDEST_VBCUFDEST": {
         "descricao": "Base de cálculo do ICMS UF destino (DIFAL)",
         "caminho_xml": "infNFe/det/imposto/ICMSUFDest/vBCUFDest",
         "secao": "Item - DIFAL"
     },
-    "ITEM_ICMS_UFDEST_PICMSUFDEST": {
+    "ITEM_DIFAL_UFDEST_PICMSUFDEST": {
         "descricao": "Alíquota ICMS – UF destino (%)",
         "caminho_xml": "infNFe/det/imposto/ICMSUFDest/pICMSUFDest",
         "secao": "Item - DIFAL"
     },
-    "ITEM_ICMS_UFDEST_VICMSUFDEST": {
+    "ITEM_DIFAL_UFDEST_VICMSUFDEST": {
         "descricao": "Valor ICMS – UF destino",
         "caminho_xml": "infNFe/det/imposto/ICMSUFDest/vICMSUFDest",
         "secao": "Item - DIFAL"
     },
     "ITEM_TEM_DIFAL": {
         "descricao": "Indica se o item possui DIFAL",
-        "caminho_xml": "presença de infNFe/det/imposto/ICMSUFDest",
+        "caminho_xml": "infNFe/det/imposto/ICMSUFDest",
         "secao": "Item - DIFAL"
     },
     "DIFAL_CONS_FINAL": {
